fix text not centered on mobiles

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -39,6 +39,7 @@ svg{
 .bungkus{
   padding: 1rem 0;
   max-width: 100%;
+  overflow-x: hidden;
   @include media( "screen", ">bp1Width") {//800
       width: 90vw;
       max-width: 1200px;
@@ -53,7 +54,9 @@ svg{
 
 .text_content {
   max-width: 960px;
-  margin: 0 auto;
+  @include media( "screen", ">bp1Width") {
+    margin: 0 auto;
+  }
 }
 
 .site_title {
